[gd_scene load_steps=4 format=3 uid="uid://doqh01nkkdmho"]

[ext_resource type="Theme" uid="uid://1vstrjh1n4gu" path="res://themes/question.tres" id="1_4ruvr"]
[ext_resource type="Script" uid="uid://wuhkvt2amcww" path="res://questions/fill_in_the_blank.gd" id="1_o1t5i"]
[ext_resource type="Theme" uid="uid://cr2p7s5fsjbu2" path="res://themes/buttons.tres" id="2_tvtms"]

[node name="FillInTheBlank" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o1t5i")

[node name="Topic" type="Label" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("1_4ruvr")
theme_override_font_sizes/font_size = 16
text = "Topic: "
horizontal_alignment = 1
autowrap_mode = 3

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
theme = ExtResource("1_4ruvr")

[node name="HFlowContainer" type="HFlowContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2

[node name="Question" type="Label" parent="CenterContainer/VBoxContainer2/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_tvtms")
text = "Game for the development of media"
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer2/HFlowContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 2
text = "asdasd"
editable = false
expand_to_text_length = true

[node name="Question3" type="Label" parent="CenterContainer/VBoxContainer2/HFlowContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("2_tvtms")
text = "of learners of all ages will be"
vertical_alignment = 1

[node name="LineEdit2" type="LineEdit" parent="CenterContainer/VBoxContainer2/HFlowContainer"]
layout_mode = 2

[node name="Question5" type="Label" parent="CenterContainer/VBoxContainer2/HFlowContainer"]
layout_mode = 2
theme = ExtResource("2_tvtms")
text = "within WP3 as an extension of WP2?"
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FeedbackButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Feedback"

[node name="CheckButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Check"

[node name="NextButton" type="Button" parent="CenterContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next"

[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/FeedbackButton" to="." method="_on_feedback_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
